tests/test-dirs/upstream-typing-recovery/original-tests/unbound_type_constructor.compilers.reference
File "unbound_type_constructor.ml", line 12, characters 17-21:
12 | let foo2 : int * toto = 3, 4
                      ^^^^
Error: Unbound type constructor toto
